--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "pg": "^8.11.3"
   }
 }
